--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
